--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
+/* for all */
 *{
     margin:0;
 }
+/* logo img */
 .header_left img{
     height:40px;
 
 }
+/* for avathar img */
 .user {
     border-radius: 50%;
     width:45px;
 }
+/* all left middle right */
 .header{
     padding:15px 20px;
     /* row */
@@ -21,11 +25,13 @@
     z-index: 100;
     box-shadow: 0 5px 8px -9px rgba(0, 0, 0, 0.75);
 }
+/* for logo input search */
 .header_left{
     display: flex;
     justify-content:space-evenly ;
     align-items: center;
 }
+/* input type only */
 .header_input{
     display:flex;
     align-items: center;
@@ -40,16 +46,19 @@
     background-color: transparent;
     outline-width: 0;
 }
+/* middle */
 .header-middle{
     display:flex;
     flex:1;
     justify-content: center;
 }
+/* symbols in top */
 .header-option .material-symbols-outlined{
     font-size:xx-large;
     color: grey;
 
 }
+/* for displaying color wen touch top symbols */
 .header-option:hover .material-symbols-outlined{
     color: #2e81f4;
     background-color: #eff2f5;
@@ -58,16 +67,19 @@
     /* align-items: center; */
     border-bottom: none;
 }
+/* for top middle symbls except home */
 .header-option {
     display: flex;
     padding :0px 30px;
     cursor:pointer;
     align-items: center;
 }
+/* for home */
 .header-option.active .material-symbols-outlined{
     color: #2e81f4;
     border-bottom: 4px solid #2e81f4;
 }
+/* for touching */
 .header-option:hover{
     background-color: #eff2f5;
     border-radius: 10px;
@@ -75,42 +87,50 @@
     align-items: center;
     border-bottom: none;
 }
+/* top right symmbls....name.. */
 .header-info{
     display: flex;
     align-items: center;
 }
+/* name in top */
 .header-info h1{
     margin-left: 10px;
 }
+/* top right hdr */
 .header-right{
     display: flex;
     align-items: center;
 }
+/* right symbls */
 .header-right .material-symbols-outlined{
     color: gray;
     margin:0 10px;
     cursor: pointer;
 }
 
-/* sidebar */
+/* leftsidebar */
 .sidebarrow{
     display:flex;
     align-items: center;
     padding:10px;
     cursor:pointer;
 }
+/* display lightgry wen touch leftsidebar */
 .sidebarrow:hover{
     background-color: lightgray;
     border-radius: 10px;
 }
+/* text */
 .sidebarrow h1{
     margin-left: 20px;
     font-weight: 600;
 }
+/* symbl */
 .sidebarrow .material-symbols-outlined{
     font-size: xx-large;
     color:#2e81f4;
 }
+/* story */
 .story{
     position: relative;
     background-repeat: no-repeat;
@@ -123,12 +143,15 @@
     cursor: pointer;
     transition:transform 100ms ease-in;
 }
+/* wen touching the story */
 .story:hover{
     transform:scale(1.07);
 }
+/* img */
 .story-img{
     margin: 10px;
 }
+/* name on img like nehala */
 .story h1{
     position: absolute;
     bottom: 20px;
@@ -142,6 +165,7 @@
 .main-body{
     display: flex;
 }
+/* all body */
 body{
     background-color: #eff2f5;
 }
@@ -153,6 +177,7 @@ body{
     justify-content: center;
     align-items: center;
 }
+/* side bar as class */
 .sidebar{
     padding:25px 10px;
     flex:0.33;
@@ -192,6 +217,7 @@ body{
     justify-content: space-evenly;
 
 }
+/* for symbols inmes */
 .messagesender-option{
     padding: 8px;
     display: flex;
@@ -199,6 +225,7 @@ body{
     color: grey;
     margin: 5px;
 }
+/* text */
 .messagesender-option h1{
     font-size: medium;
     margin-left: 10px;
@@ -219,6 +246,7 @@ body{
 .post-image img{
     width:100%;
 }
+/* @msg top */
 .post-top{
     display: flex;
     position:relative;
@@ -228,9 +256,11 @@ body{
 .post-img{
     margin-right: 10px;
 }
+/* @msg text */
 .postinfo h1{
     font-size: medium;
 }
+/* for date in msg */
 .postinfo p{
     font-size: small;
     color:grey;
@@ -240,6 +270,7 @@ body{
     margin-bottom: 10px;
     padding: 15px 25px;
 }
+/* under img options */
 .post-option{
     padding-top: 10px;
     border-top: 1px solid lightgray;
@@ -257,6 +288,7 @@ body{
     padding: 5px;
     flex:1;
 }
+/* for test..like...etc */
 .post-option p{
     margin-left: 10px;
 
@@ -294,18 +326,15 @@ body{
     }
 
 }
-/* @media(min-width:320px){
-    .storyreel{
-        width:100px;
-        overflow-x:scroll;
-    }
-} */
+
 @media(min-width:769px)and(max-width:1440px){
     .feed{
         width:50%;
         padding: 10px 50px;
     }
 }
+
+
 
 
 
